# airwaves-os

./: .gitignore  CLAUDE.md  Makefile  README.md  airwaves-config.example.json  docker-compose.dev.yml  docker-compose.prod.yml
.trunk/: trunk.yaml
armbian/: aircraft-reports-kml.py  airframes-backend-diagram.py  armbian-build.sh  build.sh
catalog/: current.json  latest.json
containers/airwaves-manager/: Cargo.toml  Dockerfile
containers/airwaves-manager/src/: error.rs  forwarding.rs  main.rs  sdr.rs
containers/airwaves-manager/src/adapters/: config.rs  docker.rs  hardware.rs  host.rs  mod.rs  system.rs  updater.rs
containers/airwaves-manager/src/domain/: mod.rs
containers/airwaves-manager/src/handlers/: apps.rs  config.rs  containers.rs  exec.rs  feeds.rs  fleet.rs  forwarding.rs  hardware.rs  host.rs  install.rs  mod.rs  network.rs  proxy.rs  system.rs  tracking.rs  update.rs  wifi.rs  ws_handler.rs
containers/airwaves-manager/src/middleware/: mod.rs
containers/airwaves-manager/src/ports/: mod.rs
containers/airwaves-manager/src/ws/: mod.rs
docs/: AB-UPDATES.md  DEPLOYMENT.md  GETTING_STARTED.md  PRECONFIG.md  ROADMAP.md  TROUBLESHOOTING.md  UPDATES.md
flasher/: catalog.json  gen-catalog.mjs
pilot/: go.mod  go.sum  pilot.service
pkgs/: build-all.sh  common.sh
releases/: 0.0.8.yaml  1.0.1.json  1.0.10.json  1.0.16.json  1.0.17.json  1.0.18.json  1.0.19.json  1.0.2.json  1.0.20.json  1.0.21.json  1.0.22.json  1.0.23.json  1.0.3.json  1.0.4.json  1.0.5.json  1.0.6.json  1.0.7.json  1.0.8.json  1.0.9.json  beta.json  dev.json  stable.json
(+154 files in other folders)
