[package]
name = "airwaves-manager"
version = "1.0.19"
edition = "2021"
description = "Airwaves OS system management API"
license = "MIT"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Docker management
bollard = "0.18"

# System information
sysinfo = "0.33"

# statvfs for host disk usage
libc = "0.2"

# Semantic version comparison for the updater
semver = "1"

# USB device enumeration
nusb = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP client (for proxying to decoder containers)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Random (for simulation)
rand = "0.9"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1
